:memo: docs(CSS Variable): add README.md

--- a/03-CSS Variable/index.html
+++ b/03-CSS Variable/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h1>Magic CSS Variables with <span class="hl"></span>JS</h1>
+  <h1>Magic CSS Variables with <span class="hl">JS</span></h1>
 
   <div class="content">
       <label for="spacing">Spacing:</label>
